<resources>
    <string name="app_name">My App Portafolio!!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings in development</string>
    <string name="MyApp">My Nanodegree Apps!!!</string>
    <string name="titulo">My Nanodegree Apps!</string>
    <string name="button1">Spotify Streamer</string>
    <string name="button2">Football Scores App</string>
    <string name="button3">Build It Bigger</string>
    <string name="button4">Super Reader</string>
    <string name="button5">Capstone: My Own App</string>
    <string name="button0">Library App</string>
</resources>
