<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/titulo"
            android:textColor="@color/griss"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/udacios"
            android:tag="@string/button1"
            android:onClick="Notify1"
            android:text="@string/button1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FF9800"
            android:text="@string/button2"
            android:tag="@string/button2"
            android:onClick="Notify1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/udacios"
            android:text="@string/button0"
            android:tag="@string/button0"
            android:onClick="Notify1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/udacios"
            android:text="@string/button3"
            android:tag="@string/button3"
            android:onClick="Notify1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/udacios"
            android:text="@string/button4"
            android:tag="@string/button4"
            android:onClick="Notify1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@color/translucent_red"
            android:text="@string/button5"
            android:tag="@string/button5"
            android:onClick="Notify1"/>

    </LinearLayout>
</LinearLayout>